[375]: Remove new user object from registration response, also some cleanup